<resources>

    <string name="app_name">JSA</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">SoCal JSA</string>
    
    
    <string name="governor">Governor</string>
    <string name="governor_person">Julianna Joss</string>
    <string name="lieutenant_governor">Lieutenant Governor</string>
    <string name="lieutenant_governor_person">Grant Crater</string>
    <string name="speaker_of_the_assembly">Speaker of the Assembly</string>
    <string name="speaker_of_the_assembly_person">Nicole Michelson</string>
    <string name="chief_of_staff">Chief of Staff</string>
    <string name="chief_of_staff_person">Valerie Edwards</string>
    <string name="director_of_chapter_affairs">Director of Chapter Affairs</string>
    <string name="director_of_chapter_affairs_person1">Neema Korouri</string>
    <string name="director_of_chapter_affairs_person2">Samantha Garfield</string>
    <string name="director_of_technology">Director of Technology</string>
    <string name="director_of_technology_person1">Vinnie Magro</string>
    <string name="director_of_technology_person2">Jane Chen</string>
    <string name="secretary_of_senate">Secretary of the Senate</string>
    <string name="secretary_of_senate_person">Liam Nuebling</string>
    <string name="speaker_pro_tempore">Speaker Pro-Tempore</string>
    <string name="speaker_pro_tempore_person">Roman Guerrero</string>
    <string name="program_director">Program Director</string>
    <string name="program_director_person">Tracy Thomas</string>
    
    
    <string name="agenda">Agenda</string>
    <string name="agenda_u"><![CDATA[<u>Agenda</u>]]></string>
    <string name="leave_a_comment">Leave a comment</string>
    <string name="vote">Vote for best speaker</string>
    <string name="vote_instructions">Please enter the name of the speaker whom you would like to vote for as best speaker. You may only vote 1 time per block, if you attempt to vote multiple times in one block, the program will only accept your last vote.</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>

</resources>